--- a/index.html
+++ b/index.html
@@ -76,6 +76,38 @@
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
+          <div class="form">
+            <h4 class="form-title">Залиште свої дані, ми вам передзвонимо</h4>
+            <div class="form-field">
+              <label class="form-label" for="name">Ім'я</label
+              ><input type="text" name="name" id="name" class="form-input" />
+            </div>
+            <div class="form-field">
+              <label class="form-label" for="phone">Телефон</label
+              ><input type="tel" name="phone" id="phone" class="form-input" />
+            </div>
+            <div class="form-field">
+              <label class="form-label" for="mail">Пошта</label
+              ><input type="mail" name="mail" id="mail" class="form-input" />
+            </div>
+            <div class="form-field">
+              <label class="form-label" for="comment">Коментар</label>
+              <textarea
+                name="comment"
+                id="comment"
+                rows="5"
+                placeholder="Введіть текст"
+              ></textarea>
+            </div>
+            <div class="policy-field">
+              <input type="checkbox" name="policy" id="policy" />
+              <label for="policy"
+                >Погоджуюся з розсилкою та приймаю
+                <a href="#">Умови договору</a></label
+              >
+            </div>
+            <button type="submit" class="primary-button">Відправити</button>
+          </div>
         </div>
       </section>
 
@@ -435,6 +467,7 @@
             </li>
           </ul>
         </div>
+        .
       </div>
     </footer>
     <script src="./modal.js"></script>
