--- a/index.html
+++ b/index.html
@@ -72,23 +72,32 @@
       <section class="backdrop is-hidden" data-modal>
         <div class="modal">
           <button type="button" class="close-button" data-modal-close>
-            <svg class="icom" width="18" height="18">
+            <svg width="18" height="18">
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
           <div class="form">
             <h4 class="form-title">Залиште свої дані, ми вам передзвонимо</h4>
             <div class="form-field">
-              <label class="form-label" for="name">Ім'я</label
-              ><input type="text" name="name" id="name" class="form-input" />
+              <label class="form-label" for="name">Ім'я</label>
+              <input type="text" name="name" id="name" class="form-input" />
+              <svg class="icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
             </div>
             <div class="form-field">
-              <label class="form-label" for="phone">Телефон</label
-              ><input type="tel" name="phone" id="phone" class="form-input" />
+              <label class="form-label" for="phone">Телефон</label>
+              <input type="tel" name="phone" id="phone" class="form-input" />
+              <svg class="icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
             </div>
             <div class="form-field">
-              <label class="form-label" for="mail">Пошта</label
-              ><input type="mail" name="mail" id="mail" class="form-input" />
+              <label class="form-label" for="mail">Пошта</label>
+              <input type="mail" name="mail" id="mail" class="form-input" />
+              <svg class="icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-mail"></use>
+              </svg>
             </div>
             <div class="form-field">
               <label class="form-label" for="comment">Коментар</label>
@@ -467,7 +476,6 @@
             </li>
           </ul>
         </div>
-        .
       </div>
     </footer>
     <script src="./modal.js"></script>
