Added subscription section in footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -306,7 +306,7 @@
           </address>
         </div>
         <div class="footer-social-links">
-          <p class="call">приєднуйтесь</p>
+          <p class="footer-title">приєднуйтесь</p>
           <ul class="list social-list footer-social-list">
             <li>
               <a href="#" class="link" aria-label="Instagram">
@@ -337,6 +337,15 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscription-section">
+          <p class="footer-title">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <input type="mail" placeholder="E-mail" class="email-input" />
+            <button type="button" class="primary-button footer-button">
+              Підписатися
+            </button>
+          </form>
         </div>
       </div>
     </footer>
