--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main>
       <!-- Hero section -->
       <section class="hero">
-        <div class="container">
+        <div class="hero-section container">
           <h1 class="heading">Ефективні рішення для вашого бізнесу</h1>
           <button type="button" class="primary-button" data-modal-open>
             Замовити послугу
@@ -76,45 +76,55 @@
               <use href="./images/icons.svg#icon-close"></use>
             </svg>
           </button>
-          <div class="form">
+          <div class="js-speaker-form form" autocomplete="off">
             <h4 class="form-title">Залиште свої дані, ми вам передзвонимо</h4>
-            <div class="form-field">
-              <label class="form-label" for="name">Ім'я</label>
-              <input type="text" name="name" id="name" class="form-input" />
-              <svg class="icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-person"></use>
-              </svg>
-            </div>
-            <div class="form-field">
-              <label class="form-label" for="phone">Телефон</label>
-              <input type="tel" name="phone" id="phone" class="form-input" />
-              <svg class="icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-phone"></use>
-              </svg>
-            </div>
-            <div class="form-field">
-              <label class="form-label" for="mail">Пошта</label>
-              <input type="mail" name="mail" id="mail" class="form-input" />
-              <svg class="icon" width="18" height="18">
-                <use href="./images/icons.svg#icon-mail"></use>
-              </svg>
-            </div>
-            <div class="form-field">
-              <label class="form-label" for="comment">Коментар</label>
+            <label class="form-field">
+              <span class="form-label">Ім'я</span>
+              <div class="input-wrap">
+                <input type="text" name="name" class="form-input" />
+                <svg class="icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-person"></use>
+                </svg>
+              </div>
+            </label>
+            <label class="form-field">
+              <span class="form-label">Телефон</span>
+              <div class="input-wrap">
+                <input type="tel" name="phone" class="form-input" />
+                <svg class="icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-phone"></use>
+                </svg>
+              </div>
+            </label>
+            <label class="form-field">
+              <span class="form-label">Пошта</span>
+              <div class="input-wrap">
+                <input type="mail" name="mail" class="form-input" />
+                <svg class="icon" width="18" height="18">
+                  <use href="./images/icons.svg#icon-mail"></use>
+                </svg>
+              </div>
+            </label>
+
+            <label class="form-field">
+              <span class="form-label">Коментар</span>
               <textarea
                 name="comment"
-                id="comment"
+                class="comment"
                 rows="5"
                 placeholder="Введіть текст"
               ></textarea>
-            </div>
-            <div class="policy-field">
-              <input type="checkbox" name="policy" id="policy" />
-              <label for="policy"
+            </label>
+
+            <label class="policy-field">
+              <input type="checkbox" name="policy" class="policy-input" />
+              <span class="checkbox-icon"></span>
+              <span class="policy-label"
                 >Погоджуюся з розсилкою та приймаю
-                <a href="#">Умови договору</a></label
-              >
-            </div>
+              </span>
+              <a href="#" class="policy-link">Умови договору</a>
+            </label>
+
             <button type="submit" class="primary-button">Відправити</button>
           </div>
         </div>
@@ -444,7 +454,7 @@
           </address>
         </div>
         <div class="footer-social-links">
-          <p class="call">приєднуйтесь</p>
+          <p class="footer-title">приєднуйтесь</p>
           <ul class="list social-list footer-social-list">
             <li>
               <a href="#" class="link" aria-label="Instagram">
@@ -475,6 +485,15 @@
               </a>
             </li>
           </ul>
+        </div>
+        <div class="subscription-section">
+          <p class="footer-title">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <input type="mail" placeholder="E-mail" class="email-input" />
+            <button type="button" class="primary-button footer-button">
+              Підписатися
+            </button>
+          </form>
         </div>
       </div>
     </footer>
