--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
         </div>
         <div class="subscription-section">
           <p class="footer-title">Підпишіться на розсилку</p>
-          <form class="footer-form">
+          <form class="footer-form" autocomplete="off">
             <input type="mail" placeholder="E-mail" class="email-input" />
             <button type="button" class="primary-button footer-button">
               Підписатися
