--- a/portfolio.html
+++ b/portfolio.html
@@ -340,7 +340,7 @@
         </div>
         <div class="subscription-section">
           <p class="footer-title">Підпишіться на розсилку</p>
-          <form class="footer-form">
+          <form class="footer-form" autocomplete="off">
             <input type="mail" placeholder="E-mail" class="email-input" />
             <button type="button" class="primary-button footer-button">
               Підписатися
